samples/_failures_safe/1761320922_846f38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ee948dc.c: In function ‘main’:
./samples/SAFE/__tmp_8ee948dc.c:139:9: error: expected declaration or statement at end of input
  139 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_8ee948dc.c:139:9: error: expected declaration or statement at end of input
